--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div>
             <img src="images/480*400.png">
-            <p>Pirate Ipsum scuttle rigging scurvy cog lee nipper Letter of Marque transom Buccaneer Privateer. Chain Shot ho Letter of Marque hornswaggle booty fathom jack bounty maroon Barbary Coast. Nipperkin Barbary Coast measured fer yer chains blow the man down Letter of Marque smartly splice the main brace furl parley starboard.Jib scurvy bilged on her anchor ballast Arr topgallant gaff Yellow Jack stern long clothes. Ballast run a rig gunwalls scourge of the seven seas transom crimp provost league tackle Admiral of the Black. Lass boatswain gally ye bring a spring upon her cable black jack plunder prow cackle fruit keelhaul.</p>
+            <p>Pirate Ipsum scuttle rigging scurvy cog lee nipper Letter of Marque transom Buccaneer Privateer. Chain Shot ho Letter of Marque hornswaggle booty fathom jack bounty maroon Barbary Coast. Nipperkin Barbary Coast measured fer yer chains blow the man down Letter of Marque smartly splice the main brace furl parley starboard.Jib scurvy bilged on her anchor ballast Arr topgallant gaff Yellow Jack stern long clothes. Ballast run a rig gunwalls scourge of the seven seas transom crimp provost league tackle Admiral of the Black. Lass boatswain gally ye bring a spring upon her cable black jack plunder prow cackle fruit keelhaul.Pirate Ipsum scuttle rigging scurvy cog lee nipper Letter of Marque transom Buccaneer Privateer. Chain Shot ho Letter of Marque hornswaggle booty fathom jack bounty maroon Barbary Coast. Nipperkin Barbary Coast measured fer yer chains blow the man down Letter of Marque smartly splice the main brace furl parley starboard.Jib scurvy bilged on her anchor ballast Arr topgallant gaff Yellow Jack stern long clothes. Ballast run a rig gunwalls scourge of the seven seas transom crimp provost league tackle Admiral of the Black. Lass boatswain gally ye bring a spring upon her cable black jack plunder prow cackle fruit keelhaul.</p>
         </div>
 
 
@@ -31,7 +31,7 @@
 
 
        <footer>
-            <div></div>
+            <div id="foot"></div>
        </footer> 
     </body>
 
